updated reverted SubscriptionController